# OSC2VMIDI

./: CMakeLists.txt  README.md  UDPServer.cpp  UDPServer.h  VirtualMidiDevice.cpp  VirtualMidiDevice.h  main.cpp  setting.csv
